--- a/style-gallery.css
+++ b/style-gallery.css
@@ -179,18 +179,27 @@ img {
   right: 30px;
   z-index: 99;
   border: none;
-  outline: none;
+  outline: 0;
   background-color: #555;
-  color: white;
   cursor: pointer;
   padding: 15px;
   border-radius: 10px;
   font-size: 18px;
   transition: opacity 0.3s, visibility 0.3s ease-in-out;
 }
-
 #topBtn:hover {
-  background-color: black;
+  background-color: rgb(255, 255, 255);
+  color: black;
+}
+@media screen and (max-width: 800px) {
+  #topBtn {
+    display: block;
+  }
+}
+@media screen and (min-width: 800px) {
+  #topBtn {
+    display: none;
+  }
 }
 
 /* Show the button when the user scrolls down */
